<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mn"
    tools:context=".activitys.UpdateActivity">

    <ImageView
        android:id="@+id/updt_img"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app" />

    <TextView
        android:id="@+id/updt_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/update_tl"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updt_img" />

    <TextView
        android:id="@+id/updt_sbTl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.5"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/update_cntn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updt_tl" />

    <TextView
        android:id="@+id/updt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/shape_cuadrado"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:text="@string/upd_ok"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updt_sbTl" />
</androidx.constraintlayout.widget.ConstraintLayout>